force-app/main/default/objects/Player_Answer__c/Player_Answer__c.object-meta.xml
<CustomObject>
    <description>One player's answer in a round.</description>
    <label>Player Answer</label>
    <nameField>
        <label>Player Answer Name</label>
        <displayFormat>{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>