force-app/main/default/objects/Player_Answer__c/fields/Explanation_Shown__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Shown__c</fullName>
    <label>Explanation Shown</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>