force-app/main/default/objects/Player_Answer__c/fields/Game_Round__c.field-meta.xml
<CustomField>
    <fullName>Game_Round__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game Round</label>
    <referenceTo>Game_Round__c</referenceTo>
    <relationshipLabel>Game Round</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>