force-app/main/default/objects/Player_Answer__c/fields/Game_Session__c.field-meta.xml
<CustomField>
    <fullName>Game_Session__c</fullName>
    <label>Game Session</label>
    <type>Lookup</type>
    <referenceTo>Game_Session__c</referenceTo>
    <relationshipName>Answers</relationshipName>
    <relationshipLabel>Game Session</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>