force-app/main/default/objects/Player_Answer__c/fields/Hint_Used__c.field-meta.xml
<CustomField>
    <fullName>Hint_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hint Used</label>
    <type>Checkbox</type>
</CustomField>