force-app/main/default/objects/Player_Answer__c/fields/Misconception_Tag__c.field-meta.xml
<CustomField>
    <fullName>Misconception_Tag__c</fullName>
    <description>Copied from the selected Trivia_Answer_Choice__c.Misconception_Tag__c when the answer was wrong. Drives &quot;your most common pitfalls&quot; insights.</description>
    <label>Misconception Tag</label>
    <length>120</length>
    <type>Text</type>
</CustomField>