force-app/main/default/objects/Player_Answer__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Player__c</referenceTo>
    <relationshipName>Answers</relationshipName>
    <relationshipLabel>Player</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>