force-app/main/default/objects/Player_Answer__c/fields/Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded__c</fullName>
    <label>Points Awarded</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>