force-app/main/default/objects/Player_Answer__c/fields/Question_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Question_Difficulty__c</fullName>
    <description>Snapshot of the question&apos;s difficulty at answer time.</description>
    <label>Question Difficulty</label>
    <length>40</length>
    <type>Text</type>
</CustomField>