force-app/main/default/objects/Player_Answer__c/fields/Question_Domain__c.field-meta.xml
<CustomField>
    <fullName>Question_Domain__c</fullName>
    <description>Snapshot of the question&apos;s exam domain at answer time, denormalised for fast per-user analytics.</description>
    <label>Question Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>