force-app/main/default/objects/Player_Answer__c/fields/Question_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Question_Keywords__c</fullName>
    <description
    >Snapshot of the question&apos;s keywords at answer time, used to drive per-user word-cloud and topic-mastery analytics.</description>
    <label>Question Keywords</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>