force-app/main/default/objects/Player_Answer__c/fields/Question_Tags__c.field-meta.xml
<CustomField>
    <fullName>Question_Tags__c</fullName>
    <description>Snapshot of the question&apos;s tags at answer time.</description>
    <label>Question Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>