force-app/main/default/objects/Player_Answer__c/fields/Response_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Ms__c</fullName>
    <label>Response Time Ms</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>