force-app/main/default/objects/Player_Answer__c/fields/Selected_Choice__c.field-meta.xml
<CustomField>
    <fullName>Selected_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
    >The exact Trivia_Answer_Choice__c the player picked. Enables per-distractor analytics.</description>
    <label>Selected Choice</label>
    <referenceTo>Trivia_Answer_Choice__c</referenceTo>
    <relationshipLabel>Player Answers</relationshipLabel>
    <relationshipName>Player_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>