force-app/main/default/objects/Player_Answer__c/fields/Selected_Choice_Labels__c.field-meta.xml
<CustomField>
    <fullName>Selected_Choice_Labels__c</fullName>
    <label>Selected Choice Labels</label>
    <length>40</length>
    <type>Text</type>
</CustomField>