force-app/main/default/objects/Player_Answer__c/fields/Selected_Choice_Text__c.field-meta.xml
<CustomField>
    <fullName>Selected_Choice_Text__c</fullName>
    <description>Snapshot of the chosen answer text at answer time (immune to later edits).</description>
    <label>Selected Choice Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>