force-app/main/default/objects/Player_Answer__c/fields/Trivia_Question__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trivia Question</label>
    <referenceTo>Trivia_Question__c</referenceTo>
    <relationshipLabel>Trivia Question</relationshipLabel>
    <relationshipName>Player_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>