force-app/main/default/objects/Player_Answer__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>